# binpack-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: binpack.yml  pages.yml
examples/: binpack_reader.rs  binpack_writer.rs  reduce_size.rs
include/: sfbinpack.h
src/: arithmetic.rs  compressed_data_file.rs  compressed_move.rs  compressed_position.rs  compressed_training_file.rs  data_entry.rs  entry.rs  ffi.rs  lib.rs  main.rs  packed_entry.rs  wasm.rs
src/chess/: attacks.rs  castling_rights.rs  coords.rs  move.rs  piece.rs  piecetype.rs  position.rs
src/common/: arithmetic.rs  compressed_move.rs  compressed_position.rs  compressed_training_file.rs  compressed_training_file_reader.rs  compressed_training_file_writer.rs  cpu_features.rs  entry.rs  mod.rs
src/reader/: bitreader.rs  compressed_reader.rs  data_reader.rs  mod.rs  move_score_list_reader.rs  reader.rs
src/writer/: compressed_writer.rs  mod.rs  move_score_list.rs  move_score_list_writer.rs
wasm-test/: app.js  index.html
