[package]
name = "sfbinpack"
version = "0.6.3"
description = "Library to read Stockfish Binpacks"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Disservin/binpack-rust"
readme = "README.md"

[features]
default = []

# Kept for compatibility. BMI2 dispatch is selected automatically at runtime.
bmi2 = []

[dependencies]
arrayvec = "0.7.6"
raw-cpuid = "11.6.0"
thiserror = "2.0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "sfbinpack"
path = "src/main.rs"

[profile.release]
debug = 1
opt-level = 3
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
